--- a/.gitlab/benchmarks.yml
+++ b/.gitlab/benchmarks.yml
@@ -11,7 +11,7 @@ benchmark:
     refs:
       - branches
   interruptible: true
-  tags: ["runner:apm-k8s-tweaked-metal"]
+  tags: ["arch:amd64"]
   script:
     - export ARTIFACTS_DIR="$(pwd)/reports" && (mkdir "${ARTIFACTS_DIR}" || :)
     - ./.gitlab/scripts/capture-hardware-software-info.sh
